--- a/GPT-SoVITS-v2-240821/GPT_SoVITS/configs/tts_infer.yaml
+++ b/GPT-SoVITS-v2-240821/GPT_SoVITS/configs/tts_infer.yaml
@@ -3,9 +3,9 @@ custom:
   cnhuhbert_base_path: GPT_SoVITS/pretrained_models/chinese-hubert-base
   device: cuda
   is_half: true
-  t2s_weights_path: "GPT_weights_v2/\u6D3E\u8499-e10.ckpt"
+  t2s_weights_path: E:\GPT-SoVITS-v2-240821\GPT_weights_v2\als-e10.ckpt
   version: v2
-  vits_weights_path: "SoVITS_weights_v2/\u6D3E\u8499_e10_s19390.pth"
+  vits_weights_path: E:\GPT-SoVITS-v2-240821\SoVITS_weights_v2\als_e10_s270.pth
 default:
   bert_base_path: GPT_SoVITS/pretrained_models/chinese-roberta-wwm-ext-large
   cnhuhbert_base_path: GPT_SoVITS/pretrained_models/chinese-hubert-base
