--- a/GPT-SoVITS-v2-240821/requirements.txt
+++ b/GPT-SoVITS-v2-240821/requirements.txt
@@ -7,6 +7,7 @@ pytorch-lightning
 gradio>=4.0,<=4.24.0
 ffmpeg-python
 onnxruntime; sys_platform == 'darwin'
+onnxruntime-gpu; sys_platform != 'darwin'
 tqdm
 funasr==1.0.27
 cn2an
